[gd_scene load_steps=7 format=2]

[ext_resource path="res://Enemy/Enemy.gd" type="Script" id=1]
[ext_resource path="res://Enemy/enemy.png" type="Texture" id=2]
[ext_resource path="res://Enemy/hurt.wav" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 32, 32 )

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 10, 10 )

[sub_resource type="Animation" id=3]

resource_name = "movement"
length = 0.8
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0.0, 90.0, 180.0, 270.0, 360.0 ]
}

[node name="Enemy" type="KinematicBody2D" index="0" groups=[
"Enemy",
]]

input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 1 )
_sections_unfolded = [ "Collision", "Material", "Pause", "Pickable", "Transform", "Visibility", "Z Index", "collision" ]
health = 3
gravity = 35
acceleration = 20
max_speed = 300
on_start_move_left = false

[node name="Sprite" type="Sprite" parent="." index="0"]

texture = ExtResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="CanvasModulate" type="CanvasModulate" parent="Sprite" index="0"]

color = Color( 1, 1, 1, 1 )

[node name="Timer" type="Timer" parent="Sprite/CanvasModulate" index="0"]

process_mode = 1
wait_time = 0.05
one_shot = true
autostart = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="1"]

shape = SubResource( 1 )

[node name="LeftCollider" type="Area2D" parent="." index="2"]

position = Vector2( -32, 0 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftCollider" index="0"]

shape = SubResource( 2 )

[node name="RightCollider" type="Area2D" parent="." index="3"]

position = Vector2( 32, 0 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightCollider" index="0"]

shape = SubResource( 2 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="." index="4"]

stream = ExtResource( 3 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="5"]

root_node = NodePath("..")
autoplay = "movement"
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/movement = SubResource( 3 )
blend_times = [  ]
_sections_unfolded = [ "Playback Options" ]

[connection signal="timeout" from="Sprite/CanvasModulate/Timer" to="." method="_on_Timer_timeout"]

[connection signal="body_entered" from="LeftCollider" to="." method="_on_LeftCollider_body_entered"]

[connection signal="body_entered" from="RightCollider" to="." method="_on_RightCollider_body_entered"]


